Finish user edit, update, undex, and destroy actions

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome to the website of Hermanos Unidos de UCSB</h1>
 
   <h2>
-    This is the home page for the UCSB student organization. Alternate website also located at <a href="http://huucsb.org">HU UCSB Official Website</a>
+    Website Under Construction. Please use the <a href="http://huucsb.org">HU UCSB Official Website</a>
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
