Add user microposts

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,33 @@
-<div class="center hero-unit">
-  <h1>Welcome to the website of Hermanos Unidos de UCSB</h1>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    
+    <div class="span8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
 
-  <h2>
-    Website Under Construction. Please use the <a href="http://huucsb.org">HU UCSB Official Website</a>
-  </h2>
+  </div>
+<% else %>
+  <div class="center hero-unit">
+    <h1>Welcome to the Sample App</h1>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+    <h2>
+      Welcome to HermanosUnidos.info, a resource for the student org Hermanos Unidos de UCSB. Please visit 
+      <a href="http://huucsb.org/">HUUCSB.org</a>
+      for the current version. 
+    </h2>
 
-<%= link_to image_tag("NewHeader2.jpg", alt: "NewHeader"), 'http://huucsb.org' %>
+    <%= link_to "Sign up now!", signup_path,
+                                class: "btn btn-large btn-primary" %>
+  </div>
+
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
