Finish Event Creation

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,6 +11,11 @@
 
       <%= f.label :email %>
       <%= f.text_field :email %>
+      
+      <%= f.label "Your Facebook URL" %>
+      <%= f.text_field :facebookUrl %>
+
+
 
       <%= f.label :password %>
       <%= f.password_field :password %>
