--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,12 +7,15 @@
       <%= render 'shared/error_messages', object: f.object %>
 
 
-
+      
       <%= f.label :name %>
       <%= f.text_field :name %>
 
       <%= f.label :email %>
       <%= f.text_field :email %>
+
+      <%= f.label "The HU Membership Token" %>
+      <%= f.text_field :secret %>
 
       <%= f.label :password %>
       <%= f.password_field :password %>
