--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,5 +1,5 @@
-<%= link_to gravatar_for(current_user, size: 52), current_user %>
-<h1>
+ <%= image_tag(current_user.avatar.url(:medium)) %>
+ <h1>
   <%= current_user.name %>
 </h1>
 <span>
