--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,14 +3,12 @@
   <aside class="span4">
     <section>
       <h1>
+        <%= image_tag(@event.avatar.url(:medium)) %>
         <%= @event.name %>
       </h1>
       <h2> <%=@event.datetime.localtime %> </h2>
       <h3><%=@event.location %></h3>
       <p><%= @event.description %></p>
-    </section>
-     <section>
-      <%= render 'shared/stats' %>
-    </section>
-  </aside>
+     </section>
+   </aside>
 </div>
