--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,11 +11,6 @@
 
       <%= f.label :email %>
       <%= f.text_field :email %>
-      
-      <%= f.label "Your Facebook URL" %>
-      <%= f.text_field :facebookUrl %>
-
-
 
       <%= f.label :password %>
       <%= f.password_field :password %>
@@ -23,10 +18,10 @@
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
 
+      <%= f.file_field :avatar %>
+
       <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
     <% end %>
 
-    <%= gravatar_for(@user) %>
-    <a href="http://gravatar.com/emails">change</a>
   </div>
 </div>
