--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,10 +3,8 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user, :html => { :multipart => true }) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-
-
       
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -22,6 +20,8 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
+
+      <%= f.file_field :avatar %>
 
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
