--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,11 @@
   <aside class="span4">
     <section>
       <h1>
-        <%= gravatar_for @user %>
+        <%= image_tag(@user.avatar.url(:medium)) %>
         <%= @user.name %>
       </h1>
     </section>
-     <section>
+    <section>
       <%= render 'shared/stats' %>
     </section>
   </aside>
