--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
 <footer class="footer">
-  <small>
-    <a href="http://xkcd.com/">xkcd</a>
-    for da lolz
+  <small>Hate the site but love HU? Become a developer by <a href="https://github.com/alexlyte/fuerza.git">pulling</a> it down here!
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="http://xkcd.com/">xkcd</a></li> for lolz
     </ul>
   </nav>
 </footer>
