--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<div class="About">
 <html>
   <head>
     <title>Hermanos Unidos de UCSB | About Us</title>
@@ -25,3 +26,4 @@ In only one year, Hermanos Unidos UCSB has grown to be amongst the largest organ
 </p>  </body>
 </html>
 
+</div>
