--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,6 +30,7 @@ background-image:url('Background2011.jpg');
 background-size: cover;
 background-repeat:no-repeat;
 background-attachment:fixed;
+background-color: #604d3f;
 }
 
 
