--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'All Events') %>
-  <div class="center hero-unit">
-    <h1> Create a New Event. </h1>
+  <div class="center joke-unit" >
+    <h1> Create a New Event</h1>
     	<p>Contact the Webmaster to obtain the event creation codeword.</p> 
     	<p></p>
 	    <%= link_to "Create Event", 'events/new',
-                                class: "btn btn-large btn-primary" %>
+                                class: "btn btn-large" %>
   </div>
 
 <h1>All Events</h1>
