--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
       <li><a href="http://news.railstutorial.org/">News</a></li>
-      <li><a href="http://xkcd.com/">xkcd</a></li> for lolz
+      <li><a href="http://xkcd.com/">xkcd</a></li>
     </ul>
   </nav>
 </footer>
