--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,17 +26,14 @@
 
 
   <div class="center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1>Welcome to HermanosUnidos.info</h1>
 
-    <h2>
-      Welcome to HermanosUnidos.info, a resource for the student org Hermanos Unidos de UCSB. Please visit 
-      <a href="http://huucsb.org/">HUUCSB.org</a>
-      for the current version. 
+    <h2> This is a demo app for the student group Hermanos Unidos. Click the button below to create an account, and encourage your fellow Hermanos to join as well. With this app, you can create a profile, start events, and much more (coming). 
     </h2>
 
 
     <%= link_to "Sign up now!", signup_path,
-                                class: "btn btn-large btn-primary" %>
+                                class: "btn btn-large" %>
   </div>
 
 
