--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,7 @@ $grayMediumLight: #eaeaea;
 
 
 
+
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -373,3 +374,6 @@ aside {
     margin-bottom: 5px;
   }
 }
+
+
+# Arbitrary Change
