Adding Content Display to Users and Events

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -17,6 +17,9 @@
       <%= f.label :contact %>
       <%= f.text_field :contact %>
 
+      <%= f.label :type %>
+      <%= f.text_field :type %>
+
       <%= f.label :description %>
       <%= f.text_field :description %>
 
