--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,8 +5,6 @@
 $grayMediumLight: #eaeaea;
 
 
-
-
 @mixin box_sizing {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -15,6 +13,11 @@ $grayMediumLight: #eaeaea;
 
 
 /* universal */
+
+
+.div{
+  color: #eae9e3;
+}
 
 html {
   overflow-y: scroll;
