--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,11 +12,24 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
 
+      <%= f.label :about %>
+      <%= f.text_area :about %>
+
+      <%= f.label :interests %>
+      <%= f.text_area :interests %>
+
+      <%= f.label :classes %>
+      <%= f.text_area :classes %>
+
+      <%= f.label :year %>
+      <%= f.text_field :year %>
+
       <%= f.label :password %>
       <%= f.password_field :password %>
 
       <%= f.label :password_confirmation, "Confirm Password" %>
       <%= f.password_field :password_confirmation %>
+
 
       <%= f.file_field :avatar %>
 
